<resources>
    <string name="app_name">SleepingCapsule</string>
    <string name="Snooze">Snooze</string>


    <string name="adjustPosition"> Adjust Position!</string>

    <string name="pickPosition"> Pick a Position!</string>

    <string name="FavPos"> Favorite</string>

    <string name="LyingPose"> Lying</string>

    <string name="ZeroGravityPos"> Zero-Gravity</string>

    <string name="SittingPos"> Sitting</string>

    <string name="backrest"> Backrest</string>

    <string name="seatrest"> Seat</string>

    <string name="footrest"> Footrest</string>

    <string name="backrestInt"> 0°</string>

    <string name="seatrestInt"> 15°</string>

    <string name="save_as_favorite">Save as Favorite</string>
    <string name="show_favorite">Show Favorite</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="nr1">int</string>
    <string name="nr2">int</string>
    <string name="nr3">int</string>
    <string name="light_intensity">Light Intensity</string>
    <string name="color_code">Color Code</string>
    <string name="light_off">Light Off</string>
    <string name="light_on">Light On</string>
    <string name="pick_from_colorwheel">Pick from Colorwheel</string>

    <string name="footrestInt"> 30°</string>
    <string name="save_favorite"> Save favorite</string>
    <string name="play_favorite"> Play favorite</string>
    <string name="berge"> Mountains</string>
    <string name="strand"> Beach</string>
    <string name="regen"> rain</string>
    <string name="lagerfeuer"> fire place</string>
    <string name="dschungel"> jungle</string>
    <string name="wald"> forrest</string>
    <string name="bluetooth"> bluetooth</string>
    <string name="musiclibrary"> musiclibrary</string>
    <string name="spotify"> spotify</string>
    <string name="picktheme"> Pick a theme sound</string>
    <string name="ownmusic"> Hear your own music</string>
    <string name="playbutton"> play button</string>
    <string name="pausebutton"> pause button</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="hex">Hex:</string>
    <string name="colorwheel">TODO</string>
    <string name="stopchair">TODO</string>
    <string name="chair">TODO</string>
    <string name="light">TODO</string>
    <string name="music">TODO</string>
    <string name="angle" >angle</string>
    <string name="soundcontrol" >Themes SoundControl</string>
    <string name="chair_color">Chair Color</string>
    <string name="room_color">Room Color</string>
    <string name="light_for">Light for:</string>
    <string name="Chair">chair</string>
    <string name="room">room</string>
    <string name="stopsound">stop sound</string>

    />


    />
</resources>
