<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".SeatScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="1064dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginStart="788dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bungee2"
        android:gravity="center"
        android:text="@string/pickPosition"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="131dp"
        android:layout_height="341dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="272dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/FavPos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/LyingPose"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ZeroGravityPos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|fill_vertical"
            android:text="@string/SittingPos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PosButtonLayout_ID"
        android:layout_width="103dp"
        android:layout_height="320dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="400dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/favPos_ID"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/roundbutton"
            android:padding="18dp"
            android:scaleType="fitCenter"
            android:src="@drawable/favorite_position_icon" />


        <ImageButton
            android:id="@+id/lyingPos_ID"
            android:layout_width="73dp"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/roundbutton"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/lying_position_icon"
            app:srcCompat="@drawable/lying_position_icon" />

        <ImageButton
            android:id="@+id/zeroGPos_ID"
            android:layout_width="73dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/roundbutton"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/zerogravity_position_icon"
            app:srcCompat="@drawable/zerogravity_position_icon" />

        <ImageButton
            android:id="@+id/sittingPos_ID"
            android:layout_width="73dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/roundbutton"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sitting_position_icon"
            app:srcCompat="@drawable/sitting_position_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="73dp"
        android:layout_height="246dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="656dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/backresticon" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="2dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/seaticon" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/footresticon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="428dp"
        android:layout_height="52dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="152dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextBackrest_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""

            android:gravity="center"
            android:hint="@string/angle"

            android:inputType="number" />

        <EditText
            android:id="@+id/editTextSeat_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""

            android:gravity="center"
            android:hint="@string/angle"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextFeetrest_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="37dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:gravity="center"
            android:hint="@string/angle"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="87dp"
        android:layout_height="235dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="248dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/seekBarViewInfo_Top_ID"
            android:layout_width="91dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/backrestInt" />

        <TextView
            android:id="@+id/seekBarViewInfo_Mid_ID"
            android:layout_width="91dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seatrestInt" />

        <TextView
            android:id="@+id/seekBarViewInfo_Down_ID"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/footrestInt" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="431dp"
        android:layout_height="37dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="136dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/backrest"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seatrest"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/footrest"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sliderlayout_ID"
        android:layout_width="247dp"
        android:layout_height="246dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SeekBar
            android:id="@+id/seekBarTop_ID"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:max="87" />

        <SeekBar
            android:id="@+id/seekBarMiddle_ID"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="30"

            />

        <SeekBar
            android:id="@+id/seekBarDown_ID"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="90" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bungee2"
        android:gravity="center"
        android:text="@string/adjustPosition"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="1074dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="640dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savebutton_ID"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/save_as_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="154dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />

    <ImageButton
        android:id="@+id/stopChair_seatScreen_ID"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/snoozeBlau"

        android:backgroundTint="#000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/seatImageView_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            app:srcCompat="@drawable/seat_icon_white" />

        <ImageView
            android:id="@+id/lightImageView_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/light_icon_white" />

        <ImageView
            android:id="@+id/musicImageView_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/music_icon_white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>